# xp_helper

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: _.gvt1.com.cer  keystore.jks  xposed_init
app/src/main/cpp/: CMakeLists.txt  hook_dns.cpp  main.cpp  pass_root.cpp
app/src/main/cpp/third/: CMakeLists.txt
app/src/main/cpp/third/utils/: jni_helper.hpp  linux_helper.cpp  linux_helper.h  utils.cpp  utils.h
app/src/main/cpp/utils/: jni_helper.cpp  linux_helper.cpp  linux_helper.h  log.cpp  log.h  utils.cpp  utils.h
app/src/main/java/com/: LsposedHttpClient.java  MainActivity.java  MyApplication.java  NativeHelper.java
app/src/main/java/com/cache_service/: CacheServer.java
app/src/main/java/com/common/: HookTools.java  HttpService.java  HttpsService.java  StringUtil.java  log.java  units.java
app/src/main/java/com/hook/: AndroidID.java  DeviceHook.java  Google.java  GoogleDisableFontsDownload.java  GooglePlay.java  GooglePlayDisableUpdate.java  GoogleRedirect.java  GoogleRedirectFontsDownload.java  MainHook.java  PangleHook.java  PkgInstaller.java  RedirectResource.java  ResourceCache.java  ResourceCacheTest.java  Test.java  UCPackage.java
app/src/main/java/com/hook/okhttp_redirect/: Cache.java  CacheId.java  FakeDelegatingHttpsURLConnection.java  FakeRealBufferedSource.java  HttpEngine.java  OkHttpCall.java  (+8 more)
app/src/main/java/com/tools/: ClassBase.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
